--- a/paper/draft.tex
+++ b/paper/draft.tex
@@ -75,7 +75,7 @@
 \alignauthor
 Alex Palesandro\\
 \affaddr{Orange Labs, France}\\
-\texttt{palexster@gmail.com}
+\texttt{alex.palesandro@gmail.com}
 \alignauthor
 Aurélien Wailly\\
 \affaddr{Orange Labs, France}\\
