Added Related Works paragraph

--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -101,26 +101,6 @@
 	year = 2012
 }
 
-@inproceedings{sec:you,
-	abstract = {dblp},
-	added-at = {2009-11-25T00:00:00.000+0100},
-	author = {Ristenpart, Thomas and Tromer, Eran and Shacham, Hovav and Savage, Stefan},
-	booktitle = {{ACM Conference on Computer and Communications Security}},
-	crossref = {conf/ccs/2009},
-	date = {2009-11-25},
-	editor = {Al-Shaer, Ehab and Jha, Somesh and Keromytis, Angelos D.},
-	interhash = {72bc33476bb98fda08d800c12acfe1bf},
-	intrahash = {904c8c912038193d67dabeec69dcb40b},
-	isbn = {978-1-60558-894-0},
-	keywords = {dblp},
-	pages = {199--212},
-	publisher = {ACM},
-	title = {{Hey, you, get off of my cloud: exploring information leakage in third-party compute clouds.}},
-	url = {http://dblp.uni-trier.de/db/conf/ccs/ccs2009.html#RistenpartTSS09; http://doi.acm.org/10.1145/1653662.1653687; http://www.bibsonomy.org/bibtex/2904c8c912038193d67dabeec69dcb40b/dblp},
-	x-fetchedfrom = {Bibsonomy},
-	year = 2009
-}
-
 @inproceedings{turtle:ibm,
 	author = {Ben-Yehuda, Muli and Day, Michael D. and Dubitzky, Zvi and Factor, Michael and Har'El, Nadav and Gordon, Abel and Liguori, Anthony and Wasserman, Orit and Yassour, Ben-Ami},
 	booktitle = {{OSDI '10: 9th USENIX Symposium on Opearting Systems Design and Implementation}},
@@ -201,6 +181,24 @@
 	title = {{Unshackle the cloud!}},
 	url = {http://dl.acm.org/citation.cfm?id=2170444.2170460},
 	year = {2011}
+}
+
+@misc{sec:you,
+	acmid = {1653687},
+	address = {New York, NY, USA},
+	author = {Ristenpart, Thomas and Tromer, Eran and Shacham, Hovav and Savage, Stefan},
+	booktitle = {{Proceedings of the 16th ACM conference on Computer and communications security}},
+	doi = {10.1145/1653662.1653687},
+	isbn = {978-1-60558-894-0},
+	keywords = {cloud computing; side channels; virtual machine security},
+	location = {Chicago, Illinois, USA},
+	numpages = {14},
+	pages = {199--212},
+	publisher = {ACM},
+	series = {{CCS '09}},
+	title = {{Hey, you, get off of my cloud: exploring information leakage in third-party compute clouds}},
+	url = {http://doi.acm.org/10.1145/1653662.1653687},
+	year = {2009}
 }
 
 @art{xclo:blank,
@@ -645,5 +643,14 @@
 @article{ec2:disrupt,
 	title = {{Amazon Web Services outage takes down Netflix, other sites}},
 	url = {http://aws.amazon.com/fr/message/65648/}
+}
+
+@inproceedings{wu2013TamHosHypMosDepExe,
+	author = {Wu, Chiachih and Wang, Zhi and Jiang, Xuxian},
+	booktitle = {{Proceedings of the Network and Distributed System Security Symposium (NDSS), San Diego, CA}},
+	title = {{Taming Hosted Hypervisors with (Mostly) Deprivileged Execution}},
+	url = {http://www4.ncsu.edu/~cwu10/files/NDSS13_DEHYPE.pdf},
+	x-fetchedfrom = {Google Scholar},
+	year = {2013}
 }
 
