Added Related Works paragraph

--- a/paper/draft.tex
+++ b/paper/draft.tex
@@ -57,7 +57,7 @@
 
 %%% The "real" document content comes below...
 
-\title{}
+\title{ Bridging [TBD]}
 
 \author{
 % You can go ahead and credit any number of authors here,
